# EDA263_Computer-Security

EDA263_CODE/: CMakeLists.txt  EDA263 - Computer Security.code-workspace
EDA263_CODE/Hacking/Computerphile/: Makefile  buffer-overflow.md  buffer_overflow_000
EDA263_CODE/Lab1/: Makefile  capab_test.c  gdb-login_linux.txt  login_linux  login_linux.c  makepass  passdb  pwent.c  pwent.h  seteuid_test  seteuid_test.c  setuid_test  setuid_test.c
EDA263_CODE/Lab1/Report/: EDA263-CS_Lab1_Robert-Grzelka.md  EDA263-CS_Lab1_Robert-Grzelka_intro.md
EDA263_CODE/Lab1/uid_buffer_tests/: Makefile  buf_vuln_exploit.sh  envexec.sh  python_hack.txt  vuln  vuln.c
EDA263_CODE/Lab1/uid_tests/: Makefile  capab_test  seteuid_test  seteuid_test.c  setuid_test  setuid_test.c  uid_drop_test.c  uid_tests.sh
EDA263_CODE/Lab2/: report.md  whypgp.asc.txt  whypgp.txt.asc  whypgp.txt.gpg
EDA263_CODE/Lab2/gnupg/backup/: RobertGrzelka_AtLive_backup_keypair.asc  RobertGrzelka_Group68_backup_keypair.asc
EDA263_CODE/Lab2/gnupg/pubkeys/: 0x01646E97.asc  0x01646e97.asc_sign.asc  0x2DB0C2EA.asc  0x2DB0C2EA.asc_sign.asc
EDA263_CODE/Lab2/gnupg/revokeys/: Dummy User (Group XX) robgrzel@live.com (0xCCE6582C) rev.asc  Robert Grzelka (Group 68) grzelka@student.chalmers.se (0x01646E97) rev.asc  grzelka@net.chalmers.se (0x1D56A2CD) rev.asc
EDA263_CODE/Lab3/Report/GSA/Rome.Secnet/: report - gr44 - check.md  report - gr46 - check.md
EDA263_CODE/Lab3/Report/GSA/Rome.Secnet/Vulnerability Scan/: config-34a48d28-23e8-4390-9275-721961dc9497.xml
EDA263_CODE/Lab4/: report.md
(+106 files in other folders)
